--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ header{
     width: 100%;
     border:5px solid blue;
     justify-content: space-around;
+    align-items: center;
 }
 header h1{
     font-family:Georgia, 'Times New Roman', Times, serif;
@@ -54,6 +55,7 @@ header h1{
 }
 nav{
     display: flex;
+    flex-wrap: wrap;
     height: 5vh;
     width: 100%;
     border: 5px solid green;
@@ -91,7 +93,6 @@ nav a {
     border: 5px solid rgb(238, 8, 115);
     justify-content: space-around; /* Distribute items along the main axis */
     align-items: center; /* Center items vertically */
-    padding: 25ch;
     
 }
 
@@ -103,7 +104,7 @@ nav a {
 }
 
 .rings-img {
-    width: 100%;
+    width: 10vw;
     height: auto;
     border: 5px red solid;
     object-fit: contain;
@@ -113,5 +114,9 @@ article {
     width: 65vw;
     height: 15vh;
     border: 5px solid grey;
-
+    display: flex;
+    overflow-wrap: break-word;
+}
+article p {
+    
 }
