--- a/sefubrenda.com/rsvp/css/rsvp.css
+++ b/sefubrenda.com/rsvp/css/rsvp.css
@@ -1,142 +1,9 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-html,
 body {
-  margin: 0;
-  height: 100%;
-  overflow: hidden;
-  background-image: url("roses.jpg");
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Sacramento', cursive;
+  background-image: url('flowers.jpg');
+  object-fit: contain;
 }
-.underline-input{
-  background: transparent;
-  border: none transparent;
-  outline: none;
-  border-bottom: solid;
-  line-height: 1; /* Set line-height to 1 to align text to the bottom */
-  display: block; /* Make the input a block-level element */
-  width: 100%; /* Set width to fill the container */
-  
-}
-
-#image-overlay {
-  position: absolute;
-  width: 40vw;
-  height: 60vh;
-  background-size: contain;
-  background-color: rgba(203, 208, 212, 0.453);
-  background-position: center;
-  border-radius: 25px;
-}
-
-#intro {
-  color: rgb(0, 0, 0);
-  font-size: 50px;
-  text-align: center;
-  padding: 25px;
-}
-
-#location {
-  color: rgb(0, 0, 0);
-  font-size: 35px;
-  text-align: center;
-  line-height: 4vh;
-}
-
-#name {
-  display: flex;
-  align-items: center;
-  margin: 2vh;
-  padding-bottom: 2vh;
-}
-
-#name p {
-  width: 39%;
-  font-size: 45px;
-}
-
-#name input {
-  width: 20vw;
-  resize: none;
-  border: none; /* Remove the border from the input */
-  border-bottom: 1px solid black; /* Add an underline border */
-  font-family: 'Sacramento', cursive;
-  font-size: 25px;
-}
-
-#attend-container {
-  display: flex;
-  align-items: center;
-  margin: 2vh;
-  height: 5vh;
-  padding-bottom: 2vh;
-}
-
-#attend-box {
-  width: 15vw;
-}
-
-#attend-box > p {
-  margin: 0; /* Remove default margin for <p> */
-  font-size: 40px;
-
-}
-
-#radio-btn {
-  display: flex;
-  gap: 1vw;
-  align-items: center;
-  font-size: 30px;
-}
-
-#food-container {
-  padding-bottom: 2vh;
-  display: flex;
-  align-items: center;
-  margin: 2vh;
-  
-}
-
-#food-question {
-  width: 15vw;
-  font-size: 45px;
-}
-
-#food-container input {
-  width: 20vw;
-  resize: none;
-  border: none; /* Remove the border from the input */
-  border-bottom: 1px solid black; /* Add an underline border */
-  font-family: 'Sacramento', cursive;
-  font-size: 25px;
-}
-
-#btn-container {
-  display: flex;
-  justify-content: center;
-  height: 6vh;
-}
-
-button {
-  width: 8vw;
-  border: solid 1px; /* Remove the default button border */
-  border-radius: 5px;
-  padding: 5px 10px; /* Add padding to the button */
-  font-size: 45px;
-  font-family: 'Sacramento', cursive;
-  background: transparent;
-  
-}
-button:hover{
-  font-size: 50px;
-  background-color: rgba(203, 208, 212, 0.453);
-  cursor:pointer;
-}
+@media screen and (max-width: 400px) {
+ html body{
+  background-image: url('flowers.jpg');
+ }
+} 
