--- a/sefubrenda.com/rsvp/css/rsvp.css
+++ b/sefubrenda.com/rsvp/css/rsvp.css
@@ -8,7 +8,7 @@ body {
  gap: 1em;
  margin: 4px;
 }
-#attendance-title {
+#attendance {
   margin: 0;
 }
 form{
@@ -18,7 +18,18 @@ form{
 }
 @media screen and (max-width: 500px) {
  html body{
-  background-image: url('./pd22-23-28-ploy.jpg');
-  object-fit: fill;
- }
+  background-image:none;
+  background-color: white;
+  }
+  .navbar-brand{
+    display: none;
+  }
+  .img-container{
+    display: flex;
+    justify-content: center;
+  }
+  .img-container img{
+    max-width: 25em;
+    object-fit: contain;
+  }
 } 
