--- a/sefubrenda.com/css/style.css
+++ b/sefubrenda.com/css/style.css
@@ -1,78 +1,88 @@
 :root{
 --bgcolor:#C99999;
---text:black;
+--dark:black;
+--light:white;
+--cursive:'Tangerine', cursive;
 }
 body{
     padding: 0%;
     margin: 0;
-    background-color: var(--bgcolor);
-    background-image: url('sunset.jpg');
+    background-color: var(--dark);
+    /* background-image: url('sunset.jpg'); */
 }
 
 
 #title{
     margin-top: 3em;
+    color: var(--light);
 }
+
+#countdown-timer{
+  padding-top: 10px ;
+  color:var(--light);
+}
+/* nav bar css */
 .nav{
     margin-top: 1em;
 }
 
 .menu-hover-lines {
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 500;
-    letter-spacing: 1px;
-    transition: all 0.35s ease;
-  }
-  
-  .menu-hover-lines li a {
-    padding: 0.75rem 0;
-    color: rgba(10, 10, 10, 0.5);
-    position: relative;
-    margin-left: 1rem;
-  }
-  
-  .menu-hover-lines li:first-child a {
-    margin-left: 0;
-  }
-  
-  .menu-hover-lines li.active > a {
-    background-color: transparent;
-  }
-  
-  .menu-hover-lines a:before,
-  .menu-hover-lines a::after {
-    height: 3px;
-    position: absolute;
-    content: '';
-    transition: all 0.35s ease;
-    background-color: #1779ba;
-    width: 0;
-  }
-  
-  .menu-hover-lines a::before {
-    top: 0;
-    left: 0;
-  }
-  
-  .menu-hover-lines a::after {
-    bottom: 0;
-    right: 0;
-  }
-  
-  .menu-hover-lines a:hover,
-  .menu-hover-lines li.active > a {
-    color: #0a0a0a;
-    transition: all 0.35s ease;
-  }
-  
-  .menu-hover-lines a:hover::before,
-  .menu-hover-lines .active a::before,
-  .menu-hover-lines a:hover::after,
-  .menu-hover-lines .active a::after {
-    width: 100%;
-  }
-  
-  
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: all 0.35s ease;
+}
 
+.menu-hover-lines li a {
+  padding: 0.75rem 0;
+  color: rgb(255, 255, 255);
+  position: relative;
+  margin-left: 1rem;
+}
+
+.menu-hover-lines li:first-child a {
+  margin-left: 0;
+}
+
+.menu-hover-lines a::before,
+.menu-hover-lines a::after {
+  height: 3px;
+  position: absolute;
+  content: '';
+  transition: all 0.35s ease;
+  background-color: transparent;
+  width: 0; 
+}
+
+.menu-hover-lines a::before {
+  top: 0;
+  left: 0;
+}
+
+.menu-hover-lines a::after {
+  bottom: 0;
+  right: 0;
+}
+
+.menu-hover-lines a:hover {
+  color: #0a0a0a;
+  transition: all 0.35s ease;
+}
+
+.menu-hover-lines a:hover::before,
+.menu-hover-lines a:hover::after {
+  width: 100%;
+  background-color: white; 
+}
+
+/* carousel styling */
+
+.carousel{
+padding-top: 10em;
+width: 30%;
+display: block;
+margin: 0 auto;
+border: white 5px;
+}
 
