--- a/sefubrenda.com/rsvp/css/rsvp.css
+++ b/sefubrenda.com/rsvp/css/rsvp.css
@@ -4,6 +4,23 @@ body {
   background-repeat: no-repeat;
   height: 100vh;
 }
+li {
+  list-style: none;
+  transition: 0.5s;
+}
+a {
+  text-decoration: none;
+  color: var(--dark);
+  font-size: 2.5rem;
+  font-weight: 500;
+}
+
+ul:hover li {
+  filter: blur(5px);
+}
+ul li:hover {
+  filter: blur(0px);
+}
   .top {
     
     height: 200px;
