--- a/sefubrenda.com/css/style.css
+++ b/sefubrenda.com/css/style.css
@@ -22,58 +22,33 @@ body{
   color:var(--light);
 }
 /* nav bar css */
-.nav{
-    margin-top: 1em;
+li {
+  list-style: none;
+  transition: 0.5s;
 }
-
-.menu-hover-lines {
-  text-align: center;
-  text-transform: uppercase;
+a {
+  text-decoration: none;
+  color: var(--dark);
+  font-size: 2.5rem;
   font-weight: 500;
-  letter-spacing: 1px;
-  transition: all 0.35s ease;
 }
 
-.menu-hover-lines li a {
-  padding: 0.75rem 0;
-  color: rgb(255, 255, 255);
+ul:hover li {
+  filter: blur(5px);
+}
+ul li:hover {
+  filter: blur(0px);
+}
+.intro p {
+  font-family: var(--cursive);
+  color: var(--dark);
+  font-size: 10em;
   position: relative;
-  margin-left: 1rem;
 }
 
-.menu-hover-lines li:first-child a {
-  margin-left: 0;
-}
-
-.menu-hover-lines a::before,
-.menu-hover-lines a::after {
-  height: 3px;
-  position: absolute;
-  content: '';
-  transition: all 0.35s ease;
-  background-color: transparent;
-  width: 0; 
-}
-
-.menu-hover-lines a::before {
-  top: 0;
-  left: 0;
-}
-
-.menu-hover-lines a::after {
-  bottom: 0;
-  right: 0;
-}
-
-.menu-hover-lines a:hover {
-  color: #0a0a0a;
-  transition: all 0.35s ease;
-}
-
-.menu-hover-lines a:hover::before,
-.menu-hover-lines a:hover::after {
-  width: 100%;
-  background-color: white; 
+.navbar_text {
+  font-size: 2em;
+  color: var(--dark);
 }
 
 /* carousel styling */
