--- a/sefubrenda.com/public_html/rsvp/css/rsvp.css
+++ b/sefubrenda.com/public_html/rsvp/css/rsvp.css
@@ -2,7 +2,7 @@ body {
   background-image: url('./hydrangea2.jpg');
   background-size: cover; 
   background-repeat: no-repeat;
-  height: 100vh;
+  height: auto;
 }
 li {
   list-style: none;
@@ -23,17 +23,18 @@ ul li:hover {
 }
   .top {
     
-    height: 200px;
+    height: 50px;
     margin:0;
     padding:0;
     
   }
-  
+
+
   .form {
     height: auto;
     width: 50vw;
     background-color: #fff;
-    margin: -110px auto;
+    margin: 20px auto;
     border-radius: 10px;
     color: #000000;
     padding: 0px 0px;
@@ -110,6 +111,8 @@ ul li:hover {
     justify-content: center;
     padding-bottom: 4pc;
   }
+/* footer styling */
+
 
   @media screen and (max-width: 600px) {
     html body{
@@ -122,7 +125,7 @@ ul li:hover {
      }
      .top {
     
-      height: 100px;
+      height: 50px;
       margin:0;
       padding:0;
       
@@ -141,7 +144,7 @@ ul li:hover {
       height: auto;
       width: 90%;
       background-color: #fff;
-      margin: -110px auto;
+      margin: 20px auto;
       border-radius: 10px;
       color: #000000;
       padding: 0px 0px;
