--- a/sefubrenda.com/public_html/photos/assets/css/photos.css
+++ b/sefubrenda.com/public_html/photos/assets/css/photos.css
@@ -23,10 +23,11 @@ li {
   ul li:hover {
     filter: blur(0px);
   }
-  .intro p {
-    font-family: var(--cursive);
+  .navbar-nav .nav-link {
+    color: var(--background_blue);
+  }
+  .intro {
     color: var(--words);
-    font-size: 10em;
     position: relative;
   }
   
@@ -50,7 +51,13 @@ li {
     opacity: 0;
     animation: fade-in 2s ease forwards;
   }
-
+  .card:hover {
+    transform: scale(1.1);
+  }
+  .card {
+    transition: transform 0.5s;
+  }
+  
   @keyframes fade-in {
     to {
       opacity: 1;
