--- a/sefubrenda.com/public_html/assets/css/style.css
+++ b/sefubrenda.com/public_html/assets/css/style.css
@@ -3,18 +3,37 @@
 --dark:black;
 --light:white;
 --cursive:'Tangerine', cursive;
+--background_blue:#C6E2FF;
+--words:#4682B4;
 }
 body{
     padding: 0%;
     margin: 0;
-    background-color: var(--dark);
-    /* background-image: url('sunset.jpg'); */
+    background-color: var(--background_blue);
 }
 
 
-#title{
-    margin-top: 3em;
-    color: var(--light);
+.title-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 40vh;
+  margin-top: 50px;
+}
+
+.title-container div {
+  text-align: center;
+  margin: 0;
+  overflow: hidden; 
+}
+
+.title-container p {
+  gap: 1.5vw;
+  font-size: 10vh; 
+  line-height: 1;
+  font-family: 'Tangerine', cursive;
+  color: var(--words);
 }
 
 #countdown-timer{
